unpackaged/main/default/objects/conference360__Custom_Event_Tab__c/conference360__Custom_Event_Tab__c.object-meta.xml
<CustomObject>
    <description>For Custom Content.</description>
    <label>Custom Content</label>
    <nameField>
        <label>Custom Content</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>