unpackaged/main/default/objects/conference360__Custom_Event_Tab__c/fields/conference360__Content__c.field-meta.xml
<CustomField>
    <fullName>conference360__Content__c</fullName>
    <description>Content for the Custom Content.</description>
    <inlineHelpText>Content for the Custom Content.</inlineHelpText>
    <label>Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>