unpackaged/main/default/objects/conference360__Custom_Event_Tab__c/fields/conference360__Event__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Event related to this custom content.</description>
    <inlineHelpText>The Event related to this custom content.</inlineHelpText>
    <label>Event</label>
    <referenceTo>conference360__Event__c</referenceTo>
    <relationshipLabel>Custom Content</relationshipLabel>
    <relationshipName>Custom_Event_Tabs</relationshipName>
    <type>Lookup</type>
</CustomField>