unpackaged/main/default/objects/conference360__Custom_Event_Tab__c/fields/conference360__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>conference360__Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>